# oapi-rustgen

./: .gitignore  Cargo.toml  LICENSE  README.md  openapi.yaml
src/: main.rs
