[package]
name = "oapi-rustgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["wrap_help", "derive", "cargo", "env", "unicode"] }
validator = { version = "0.15", features = ["derive"] }
yaml-rust = { version = "0.4" }
convert_case = { version = "0.6" }
codegen = { version = "0.2" }
